:art: Optimize MediaType parsing